syntax = "proto3";

package login.v1;

message LoginRequest {
  string user_id = 1;
}